test/e2e/fixtures/queryparameter-routing-regex/queries.json
[
  {
    "url": "/queryparameter-routing-regex/?test_param=hello",
    "method": "GET"
  },
  {
    "url": "/queryparameter-routing-regex/",
    "method": "GET"
  },
  {
    "url": "/queryparameter-routing-regex/?test_param=HeLlO",
    "method": "GET"
  }
]
